new site version

--- a/locales/en.json
+++ b/locales/en.json
@@ -6,7 +6,12 @@
 
 
   "home_undertitle": "A ROLANDO AGUILLON’S GAME",
-  "home_title": "CINEMA PRODUCER SIMULATOR  IN WORLD OF CYBERPUNK HOLLYWOOD 2056",
+  "home_title_bold": "CINEMA PRODUCER",
+  "home_title": "SIMULATOR IN WORLD",
+  "home_title_bold_2": "OF CYBERPUNK",
+  "home_title_2": "HOLLYWOOD",
+  "home_title_bold_3": "2056",
+
   "home_subtitle": "Immerse yourself in the creative process of making unique movies in a near-future world, to become a real legend!",
 
   "about_undertitle": "sci-fi esthetization",
