--- a/locales/ua.json
+++ b/locales/ua.json
@@ -13,7 +13,10 @@
   "home_subtitle": "Пориньте у творчий процес створення унікальних фільмів у світі недалекого майбутнього, щоб стати справжньою легендою!",
 
   "about_undertitle": "sci-fi esthetization",
-  "about_title": "напиши свою власну історію створення фільмів поза часом та епохою",
+  "about_title": "напиши",
+  "about_title_bold": "свою власну історію створення",
+  "about_title_2": "фільмів поза часом",
+  "about_title_bold_2": "та епохою",
   "about_subtitle": "Керуйте найдрібнішими деталями кіновиробництва, щоб досягти найвищого прояву мистецтва",
 
   "features_title_1": "збирай команду",
