--- a/locales/en.json
+++ b/locales/en.json
@@ -15,7 +15,11 @@
   "home_subtitle": "Immerse yourself in the creative process of making unique movies in a near-future world, to become a real legend!",
 
   "about_undertitle": "sci-fi esthetization",
-  "about_title": "write your own movie-making story beyond time and epoch",
+  "about_title": "write",
+  "about_title_bold": "your own movie-making",
+  "about_title_2": "story beyond time",
+  "about_title_bold_2": "and epoch",
+
   "about_subtitle": "Manage the smallest details of film production, to achieve the ultimate art of cinematography",
 
   "features_title_1": "RECRUIT A CREW",
