change text on the about section

--- a/locales/en.json
+++ b/locales/en.json
@@ -13,12 +13,13 @@
   "home_title_bold_3": "2056",
 
   "home_subtitle": "Immerse yourself in the creative process of making unique movies in a near-future world, to become a real legend!",
-
   "about_undertitle": "sci-fi esthetization",
   "about_title": "write",
-  "about_title_bold": "your own movie-making",
-  "about_title_2": "story beyond time",
-  "about_title_bold_2": "and epoch",
+  "about_title_bold": "your own",
+  "about_title_bold_2": "movie-making ",
+  "about_title_bold_3": "story",
+  "about_title_2": "beyond time",
+  "about_title_bold_4": "and epoch",
 
   "about_subtitle": "Manage the smallest details of film production, to achieve the ultimate art of cinematography",
 
