--- a/locales/ua.json
+++ b/locales/ua.json
@@ -14,9 +14,11 @@
 
   "about_undertitle": "sci-fi esthetization",
   "about_title": "напиши",
-  "about_title_bold": "свою власну історію створення",
-  "about_title_2": "фільмів поза часом",
-  "about_title_bold_2": "та епохою",
+  "about_title_bold": "свою власну",
+  "about_title_bold_2": "історію створення ",
+  "about_title_bold_3": "фільмів ",
+  "about_title_2": "поза часом",
+  "about_title_bold_4": "та епохою",
   "about_subtitle": "Керуйте найдрібнішими деталями кіновиробництва, щоб досягти найвищого прояву мистецтва",
 
   "features_title_1": "збирай команду",
