fixed download button

--- a/locales/en.json
+++ b/locales/en.json
@@ -43,6 +43,8 @@
   "app_store": "app store",
   "follow_us": "Follow us",
   "google_play": "google play",
-  "buy": "buy"
+  "buy": "buy",
+  "download": "download"
+
 
 }
