--- a/locales/ua.json
+++ b/locales/ua.json
@@ -31,7 +31,7 @@
   "features_description_3": "Світ реагує на кожну дію, будьте дружніми і ви зберете армію відданих шанувальників",
 
   "features_title_4": "історія одного митця",
-  "features_description_4": "Дізнайтеся передісторію головних героїв, доторкніться до кульмінації творчого шляху Артмана",
+  "features_description_4": "Дізнайтеся передісторію головних героїв, доторкніться до кульмінації творчого шляху Артмена",
 
   "download_wallpaper": "завантажити шпалериr",
   "listen_youtube": "слухати саундтрек на youtube",
@@ -41,5 +41,6 @@
   "app_store": "app store",
   "follow_us": "Слідкуйте за нами",
   "google_play": "google play",
-  "buy": "купити"
+  "buy": "купити",
+  "download": "завантажити"
 }
