added ui shganges

--- a/locales/en.json
+++ b/locales/en.json
@@ -7,7 +7,7 @@
 
   "home_undertitle": "A ROLANDO AGUILLON’S GAME",
   "home_title_bold": "CINEMA PRODUCER",
-  "home_title": "SIMULATOR IN WORLD",
+  "home_title": "SIMULATOR IN THE WORLD",
   "home_title_bold_2": "OF CYBERPUNK",
   "home_title_2": "HOLLYWOOD",
   "home_title_bold_3": "2056",
