--- a/locales/en.json
+++ b/locales/en.json
@@ -5,7 +5,7 @@
   "menu-media": "media",
 
 
-  "home_undertitle": "A ROLANDO AGUILLON’S GAME",
+  "home_undertitle": "IMMERSIVE SIM",
   "home_title_bold": "CINEMA PRODUCER",
   "home_title": "SIMULATOR IN THE WORLD",
   "home_title_bold_2": "OF CYBERPUNK",
