--- a/locales/ua.json
+++ b/locales/ua.json
@@ -4,7 +4,7 @@
   "menu-features": "особливості",
   "menu-media": "медіа",
 
-  "home_undertitle": "ГРА ВІД ROLANDO AGUILLON",
+  "home_undertitle": "IMMERSIVE SIM",
   "home_title_bold": "СИМУЛЯТОР КІНОПРОДЮСЕРА",
   "home_title": "У СВІТІ",
   "home_title_bold_2": "КІБЕРПАНК ГОЛЛІВУДУ",
